Grid alignment capability, alignments fixed, box number issue resolved

--- a/Client/web/src/app/common/components/simple-grid/simple-grid.component.scss
+++ b/Client/web/src/app/common/components/simple-grid/simple-grid.component.scss
@@ -27,3 +27,11 @@ table, button, input {
 .overflow-x {
     overflow-x: scroll;
 }
+
+.center-aling, .center {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
+}
